NAS4Free 10.3.0.3 - Pilingitam
------------------------------
Changes:
- Upgrade to FreeBSD 10.3-RELEASE-P10.
- Add search function to Diagnostics|Log.
- Add bulk delete action to snapshots and other pages.
- Add configuration option for second UPS system.
- Add configuration option for tls_certcheck.
- Add zfs snapshot rollback.
- Add zpool import using gpt labels / gpt id.
- Increase allowed length of zfs dataset name and zfs volume name to 60 characters.
- Add mounting (read-only) support for EXT4 drives.
- UPS monitoring username & password can be set/changed.
- Update installer now full gpt supported.
- Refactoring Webgui parts and replace deprecated php code.
- sshd Challenge-Response Authentication is now configurable.
- Rewrite of zpool tools.
- Upgrade exfat to 1.2.3.
- Upgrade phpvirtualbox to 5.0-5.
- Upgrade tmux to 2.2.
- Upgrade fusefs-ntfs to 2016.2.22.
- Upgrade smartmontools to 6.5.
- Upgrade msmtp to 1.6.5.
- Upgrade iperf3 to 3.1.3.
- Upgrade gzip to 1.8.
- Upgrade unison to 2.48.4.
- Upgrade mDNSResponder to 625.41.2.
- Upgrade noVNC to 0.6.1.
- Upgrade samba to 4.3.11.
- Upgrade lighttpd to 1.4.41.
- Upgrade arcconf to 1_8_21375.
- Upgrade libvncserver to 0.9.10.
- Upgrade nano to 2.7.0.
- Upgrade e2fsprogs to 1.43.3.
- Upgrade virtualbox-ose to 5.1.6.
- Upgrade netatalk to 3.1.10.
- Upgrade sudo to 1.8.18.
- Upgrade dialog to 1.3-20160828.
- Upgrade jQuery to 3.1.1.
- Upgrade zoneinfo to 2016g.
- Upgrade syncthing to 0.14.8.
- Upgrade bash to 4.4.
- Upgrade inadyn-mt to 02.28.10.
- Upgrade php to 7.0.12.

Fixes:
- Fix prevent deletion of mounted gconcat softraid.
- Fix broken shadow copy.
- Fix for rsync over ssh (without deamon).
- Fix dataset did not always get destroyed on webgui if a share is in usage.
- Fix missing mimes (translation files) for File Manager (translating needed).
- Fix firewall rules cannot be moved into the preset rule area.
- Fix disable fw button not working under certain conditions.