@@ -1,0 +1,9 @@
+# This file is auto-generated by 'make config'.
+# Options for mariadb101-client-10.1.17
+_OPTIONS_READ=mariadb101-client-10.1.17
+_FILE_COMPLETE_OPTIONS_LIST=FASTMTX GSSAPI_BASE GSSAPI_HEIMDAL GSSAPI_MIT GSSAPI_NONE
+OPTIONS_FILE_UNSET+=FASTMTX
+OPTIONS_FILE_SET+=GSSAPI_BASE
+OPTIONS_FILE_UNSET+=GSSAPI_HEIMDAL
+OPTIONS_FILE_UNSET+=GSSAPI_MIT
+OPTIONS_FILE_UNSET+=GSSAPI_NONE
