@@ -2,7 +2,7 @@ PORTNAME=		php70
 PORTVERSION=	7.0.12
 PORTREVISION=	0
 CATEGORIES=		lang
-COMMENT=		PHP5 Scripting Language
+COMMENT=		PHP7 Scripting Language
 MAINTAINER=		zoon1@nas4free.org
 
 MASTER_SITES=		${MASTER_SITE_PHP:S,$,:release,}
@@ -10,6 +10,8 @@ MASTER_SITE_SUBDIR=	distributions/:release
 DISTNAME=			php-${PORTVERSION:S/.r/RC/}
 DISTFILES=			${DISTNAME}${EXTRACT_SUFX}:release
 USES+=			tar:xz cpe iconv
+CPE_PRODUCT=		php
+NO_OPTIONS_SORT=	yes
 
 BUILD_DEPENDS=		sqlite3>=3.0:databases/sqlite3
 LIB_DEPENDS=		libpcre.so:devel/pcre
@@ -22,6 +24,7 @@ LIB_DEPENDS+=		libjpeg.so:graphics/jpeg
 LIB_DEPENDS+=		libvpx.so:multimedia/libvpx
 LIB_DEPENDS+=		libgmp.so:math/gmp
 LIB_DEPENDS+=		libc-client4.so.9:mail/cclient
+LIB_DEPENDS+=		libmysqlclient.so.18:databases/mariadb101-client
 
 USE_AUTOTOOLS=	 autoconf
 AUTOTOOLSFILES=	 scripts/phpize.in
@@ -34,7 +37,7 @@ GNU_CONFIGURE=	 yes
 NO_PKG_REGISTER= yes
 
 CONFIGURE_ARGS+=	\
-		--without-pear \
+		--with-pear \
 		--with-openssl \
 		--with-gettext \
 		--enable-libxml \
@@ -78,7 +81,8 @@ CONFIGURE_ARGS+=	\
 		--enable-tokenizer \
 		--with-xmlrpc \
 		--enable-zip \
-		--with-zlib=/usr
+		--with-zlib=/usr \
+		--enable-opcache \
 
 OPTIONS=	CLI "Build CLI version" on \
 		CGI "Build CGI version" on \
@@ -117,7 +121,13 @@ pre-configure:
 
 do-install:
 	@${INSTALL_PROGRAM} -v ${WRKSRC}/sapi/cgi/php-cgi ${NAS4FREE_ROOTFS}/${PREFIX}/bin/
+	@${INSTALL_PROGRAM} -v ${WRKSRC}/sapi/cli/php ${NAS4FREE_ROOTFS}/${PREFIX}/bin/
 	@${INSTALL_SCRIPT} -v ${FILESDIR}/php-cgi-websrv ${NAS4FREE_ROOTFS}/${PREFIX}/bin/
 	@${CP} -pv ${FILESDIR}/php.ini ${NAS4FREE_ROOTFS}/${PREFIX}/etc
+
+	@${MKDIR} ${NAS4FREE_ROOTFS}${PREFIX}/lib/php/extensions/no-debug-non-zts-20151012
+	${INSTALL_DATA} ${WRKSRC}/ext/opcache/.libs/opcache.so ${NAS4FREE_ROOTFS}${PREFIX}/lib/php/extensions/no-debug-non-zts-20151012
+	@${CP} -pv ${FILESDIR}/opcache.ini ${NAS4FREE_ROOTFS}/${PREFIX}/etc/php
+	@${CP} -pv /usr/local/lib/mysql/libmysqlclient.so.18 ${NAS4FREE_ROOTFS}/${PREFIX}/lib
 
 .include <bsd.port.mk>
